tests/paczka1/fuzzy1/83653148.err
Error in line 3: LBYbsifF S58 92,7
Error in line 5: NMMhhjq S959 94,8
Error in line 16: A846 A846 74,3
Error in line 20: hCkRJxV85E S817 5,7
Error in line 28: F2rw S58 35,4
Error in line 31: KZ44 A846 72,7
